# materials_data_extraction

./: pyproject.toml
src/materials_project_etl/: configuration.py  entities.py  spark_config.py
src/materials_project_etl/api_client/: docs_client.py  properties_client.py  rest_client.py
src/materials_project_etl/processor/: handler.py  loader.py
src/materials_project_etl/transform/: doc_parsers.py  docs_parser.py  docs_preparation.py  docs_repository.py  material_parser.py  parsers.py  properties_parser.py  properties_parsers.py  properties_repository.py
tests/: conftest.py
tests/functional/: test_transform_docs.py
tests/unit/: test_docs_client.py  test_parser.py  test_properties_client.py  test_transform.py  test_transform_docs.py
